Fix alert function and form UI
