# src/main/webui/src/model/index.ts
@@ -5,6 +5,8 @@
  * OpenAPI spec version: 1.0.0-SNAPSHOT
  */
 
+export * from "./alert";
+export * from "./alertAction";
 export * from "./baseEntity";
 export * from "./baseEntityStoreInfo";
 export * from "./basicValueConverterObjectObject";
@@ -18,6 +20,7 @@ export * from "./connection";
 export * from "./connectionClientInfo";
 export * from "./connectionTypeMap";
 export * from "./databaseMetaData";
+export * from "./discount";
 export * from "./expectation";
 export * from "./externalProductQueryMessage";
 export * from "./getApiAdminStoreSearchParams";
@@ -52,11 +55,14 @@ export * from "./postApiProductNew201Stats";
 export * from "./preparedStatement";
 export * from "./preparedStatementDetails";
 export * from "./preparedStatementGroup";
+export * from "./product";
 export * from "./productInfo";
 export * from "./productInfoStats";
 export * from "./productInfoUndefined";
+export * from "./productPriceStats";
 export * from "./productQuoteImportBatchDTO";
 export * from "./productResult";
+export * from "./quote";
 export * from "./quoteDTO";
 export * from "./quoteDTODiscountPrice";
 export * from "./quoteDTOStoreInfo";
@@ -66,9 +72,13 @@ export * from "./resultSetMetaData";
 export * from "./rowIdLifetime";
 export * from "./sQLWarning";
 export * from "./selectablePath";
+export * from "./setAlertMessage";
 export * from "./shardingKey";
 export * from "./simpleQuoteDTO";
+export * from "./source";
 export * from "./statement";
+export * from "./store";
+export * from "./storeGroup";
 export * from "./storeImportBatchDTO";
 export * from "./storeInfo";
 export * from "./tableMapping";
@@ -81,3 +91,4 @@ export * from "./withDetail";
 export * from "./withDetailType";
 export * from "./withId";
 export * from "./withIdType";
+export * from "./alertDTO";
